funsho says hiding overflow is a better fix

--- a/index.css
+++ b/index.css
@@ -108,6 +108,7 @@ header {
     width: 100%;
     /* height: 100%;  */
     color: rgb(40, 79, 0);
+    overflow: hidden;
 
 }
 .date,
@@ -148,9 +149,11 @@ header {
 .date {
     /* width:0px; */
     animation: slideinRight 3s;
+    overflow: hidden;
 }
 .venue {
     animation: slideinLeft 3s;
+    overflow: hidden;
 }
 
 @keyframes showup {
@@ -160,20 +163,12 @@ header {
     100% {opacity:1;}
 }
 @keyframes slideinLeft {
-    /* 0% { margin-left: -200%; }
-    20% { margin-left:-200%; }
-    35% { margin-left:0px; }
-    100% { margin-left:0px; } */
     0% { transform: translateX(-200%); }
     20% { transform: translateX(-200%); }
     35% { transform: translateX(0); }
     100% { transform: translateX(0); }
 }
 @keyframes slideinRight {
-    /* 0% { margin-right: -200%; }
-    20% { margin-right:-200%; }
-    35% { margin-right:0px; }
-    100% { margin-right:0px; } */
 
     0% { transform: translateX(200%); }
     20% { transform: translateX(200%); }
